--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.8.0'
     compile 'com.android.support:design:25.0.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
 }
 
