--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,6 @@
         <activity android:name=".MyRecipe" />
         <activity android:name=".helpActivity" />
         <activity android:name=".FavouriteRecipe" />
-
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
@@ -32,13 +31,17 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="android.support.v7.app.AppCompatActivity" />
+
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable"/>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".SearchHome"></activity>
+        <activity android:name=".SearchHome" />
+        <activity android:name=".EditRecipeActivity"></activity>
     </application>
 
 </manifest>
